--- a/examples/tasks/pool1.yaml
+++ b/examples/tasks/pool1.yaml
@@ -1,40 +1,28 @@
-name: outline_text
+name: pool_1
 data:
   file: data/ai2d-rst_test_2.tsv
   input:
     image: url
   output:
-    outlines: json
-actions:
-  on_submitted: verify_outlines
-  on_rejected: outline_text
+    result: bool
 interface:
-  prompt: Read the instructions first. Then outline all diagram elements that contain
-    text, letters or numbers.
+  prompt: Does the diagram contain text, letters or numbers?
 project:
   setup:
-    public_name: Outline text, letters or numbers in diagrams for verification
+    public_name: POOL 1 Check if an image contains text, letters or numbers
     public_description: Look at diagrams from science textbooks and state if they
       contain text, letters or numbers.
   instructions: data/instructions.html
-training:
 pool:
   setup:
-    private_name: Outline text
+    private_name: Pool 1 - Detect text
     reward_per_assignment: 0.1
     assignment_max_duration_seconds: 600
     auto_accept_solutions: false
-    auto_accept_period_day: 3
   defaults:
     default_overlap_for_new_tasks: 1
     default_overlap_for_new_task_suites: 1
   mixer:
-    real_tasks_count: 2
+    real_tasks_count: 1
     golden_tasks_count: 0
     training_tasks_count: 0
-  filter:
-    languages:
-    - EN
-    client_type:
-    - TOLOKA_APP
-    - BROWSER
