--- a/examples/tasks/fix_outlines.yaml
+++ b/examples/tasks/fix_outlines.yaml
@@ -1,28 +1,29 @@
-name: detect_text
+name: fix
 data:
-  file: data/ai2d-rst_test_5.tsv
-  input: 
+  input:
     image: url
+    outlines: json
   output:
-    result: bool
+    outlines: json
 actions:
-#  on_accepted: outline_text
-#  next: outline_text
-  on_result: forward_bool
+  on_rejected: fix
 interface:
-  prompt: Does the diagram contain text, letters or numbers?
+  prompt: Read the instructions first. Then outline all diagram elements that contain
+    text, letters or numbers.
 project:
   setup:
-    public_name: 1 Check if an image contains text, letters or numbers
+    public_name: 4 FIX OUTLINES Outline text, letters or numbers in diagrams for verification
     public_description: Look at diagrams from science textbooks and state if they
       contain text, letters or numbers.
   instructions: data/instructions.html
+training:
 pool:
   setup:
-    private_name: Detect text
+    private_name: Fix outlines
     reward_per_assignment: 0.1
     assignment_max_duration_seconds: 600
-    auto_accept_solutions: true
+    auto_accept_solutions: false
+    auto_accept_period_day: 3
   defaults:
     default_overlap_for_new_tasks: 1
     default_overlap_for_new_task_suites: 1
@@ -30,3 +31,9 @@ pool:
     real_tasks_count: 2
     golden_tasks_count: 0
     training_tasks_count: 0
+  filter:
+    languages:
+    - EN
+    client_type:
+    - TOLOKA_APP
+    - BROWSER
