Added functionality for aggregating submitted tasks

--- a/examples/tasks/forward_bool.yaml
+++ b/examples/tasks/forward_bool.yaml
@@ -1,9 +1,13 @@
-name: forward_bool
-data:
-  output: result
-source: detect_text
+name: forward_bool        # Name of the action: this is how pools and actions refer to each other
+data:                     
+  output: result          # What the action outputs
+source: aggregate_detect  # Pool/action from which tasks are forwarded to this action
+#source: detect_text
 actions:
-  on_result:
+  on_result:              # Keys: possible outputs to the task
+                          # Values: pools to which assignments with the output are forwarded
+                          # Special cases: value "accept" automatically accepts task, "reject" automatically rejects task
+                          #                empty value simply submits the task (does not forward, reject or accept)
     true: outline_text
     false: 
     
