--- a/examples/tasks/fix_outlines.yaml
+++ b/examples/tasks/fix_outlines.yaml
@@ -1,12 +1,13 @@
-name: fix
+name: fix                         # Name of the pool: this is how pools and actions refer to each other
 data:
-  input:
+  input:                          # Input data types: pool gets images and outlines from the previous pool
     image: url
     outlines: json
-  output:
+  output:                         # Output data types
     outlines: json
-actions:
-  on_rejected: fix
+actions:                          # Actions: what to do to tasks next
+  on_rejected: fix                # If task gets rejected in a verification pool, its send back to this pool
+  on_submitted: verify_outlines   # All submitted tasks are forwarded to the verification pool
 interface:
   prompt: Read the instructions first. Then outline all diagram elements that contain
     text, letters or numbers.
@@ -15,25 +16,25 @@ project:
     public_name: 4 FIX OUTLINES Outline text, letters or numbers in diagrams for verification
     public_description: Look at diagrams from science textbooks and state if they
       contain text, letters or numbers.
-  instructions: data/instructions.html
+  instructions: data/instructions.html        # Task instructions in an HTML file
 training:
 pool:
   setup:
     private_name: Fix outlines
     reward_per_assignment: 0.1
     assignment_max_duration_seconds: 600
-    auto_accept_solutions: false
+    auto_accept_solutions: false            # Submitted tasks are not accepted automatically
     auto_accept_period_day: 3
   defaults:
-    default_overlap_for_new_tasks: 1
-    default_overlap_for_new_task_suites: 1
+    default_overlap_for_new_tasks: 1        # Overlap for pool: how many performers need to do the task
+    default_overlap_for_new_task_suites: 1  # Overlap for pool: how many performers need to do the task suite
   mixer:
-    real_tasks_count: 2
-    golden_tasks_count: 0
-    training_tasks_count: 0
-  filter:
+    real_tasks_count: 1                     # How many real tasks in a taks suite
+    golden_tasks_count: 0                   # How many control tasks in a task suite 
+    training_tasks_count: 0                 # How many training tasks in a task suite
+  filter:                                   # Specify filters: only allow some performers to see the pool
     languages:
-    - EN
-    client_type:
+    - EN                                    # Only English speakers see the pool
+    client_type:                            # Only people using the Toloka app or browser see the pool
     - TOLOKA_APP
     - BROWSER
