--- a/examples/tasks/text_detect.yaml
+++ b/examples/tasks/text_detect.yaml
@@ -1,14 +1,18 @@
-name: detect_text
+name: detect_text                 # Name of the pool: this is how pools and actions refer to each other
 data:
-  file: data/ai2d-rst_test_5.tsv
-  input: 
-    image: url
-  output:
+  file: data/ai2d-rst_test_5.tsv  # Path to file containing input data
+  input:                          # Input data types
+    image: url                    
+  output:                         # Output data types
     result: bool
-actions:
+actions:                          # Actions: what to do to tasks next
+                                  # If next action is an Aggregate-object, specify it with the key on_closed
+                                  # If next action is a Forward-object, specify it with the key on_result
+                                  # If next action is a pool, specify it either under on_submitted, on_accepted or on_rejected,
+                                  # depending on what you need.
 #  on_accepted: outline_text
-#  next: outline_text
-  on_result: forward_bool
+  on_closed: aggregate_detect
+#  on_result: forward_bool
 interface:
   prompt: Does the diagram contain text, letters or numbers?
 project:
@@ -16,17 +20,17 @@ project:
     public_name: 1 Check if an image contains text, letters or numbers
     public_description: Look at diagrams from science textbooks and state if they
       contain text, letters or numbers.
-  instructions: data/instructions.html
+  instructions: data/instructions.html    # Task instructions in an HTML file
 pool:
   setup:
     private_name: Detect text
     reward_per_assignment: 0.1
     assignment_max_duration_seconds: 600
-    auto_accept_solutions: true
+    auto_accept_solutions: true             # Automatically accept all submitted tasks
   defaults:
-    default_overlap_for_new_tasks: 1
-    default_overlap_for_new_task_suites: 1
-  mixer:
-    real_tasks_count: 2
-    golden_tasks_count: 0
-    training_tasks_count: 0
+    default_overlap_for_new_tasks: 1        # Overlap for pool: how many performers need to do the task
+    default_overlap_for_new_task_suites: 1  # Overlap for pool: how many performers need to do the task suite
+  mixer:                                    # Settings for one task suite
+    real_tasks_count: 1                     # How many real tasks in a task suite
+    golden_tasks_count: 0                   # How many control tasks in a suite
+    training_tasks_count: 0                 # How many training tasks in a suite
