--- a/examples/tasks/aggregate_detect.yaml
+++ b/examples/tasks/aggregate_detect.yaml
@@ -1,7 +1,6 @@
 name: aggregate_detect
-source: detect_text
-actions:
+source: detect_text       # Pool from which tasks are forwarded to the Aggregate-action
+actions:                  # What happens to tasks after aggregation
   on_result: forward_bool
-method: dawid_skene
-accept: False
-reject: False
+method: dawid_skene       # Aggregation method. For options, see https://toloka.ai/en/docs/crowd-kit/
+                          # For now, methods for categorical responses are supported
