--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "abulafia"
 version = "0.1.1"
-description = "A tool for fairer and reproducible crowdsourcing using Toloka"
+description = "A tool for fair and reproducible crowdsourcing using Toloka"
 readme = "README.md"
 requires-python = ">=3.8"
 authors = [
