--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "abulafia"
-version = "0.1.2"
+version = "0.1.3"
 description = "A tool for fair and reproducible crowdsourcing using Toloka"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -16,6 +16,6 @@ dependencies = [
     "crowd_kit>=1.0.0",
     "pytest",
     "PyYAML>=6.0",
-    "toloka_kit>=0.1.26",
+    "toloka_kit[pandas]>=1.0.0",
     "wasabi>=0.9.0"
 ]
