--- a/examples/config/outline_text_verify.yaml
+++ b/examples/config/outline_text_verify.yaml
@@ -1,5 +1,6 @@
 name: outline_text
 data:
+  file: data/verify_image_data.tsv
   input:
     image: url
   output:
@@ -38,8 +39,6 @@ pool:
     - TOLOKA_APP
     - BROWSER
 quality_control:
-  speed_quality_balance:
-    top_percentage_by_quality: 40
   fast_responses:
     history_size: 5
     count: 3
