--- a/examples/config/outline_text_verify.yaml
+++ b/examples/config/outline_text_verify.yaml
@@ -11,8 +11,10 @@ actions:
 interface:
   prompt: Read the instructions first. Then outline all diagram elements that contain
     text, letters or numbers.
+  labels:
+    text: Text
+    image: Image
 project:
-  id: 137771
   setup:
     public_name: Outline text, letters or numbers in diagrams
     public_description: Look at diagrams from science textbooks and state if they
