--- a/examples/config/verify_polygon.yaml
+++ b/examples/config/verify_polygon.yaml
@@ -1,6 +1,6 @@
 name: verify_polygon
 data:
-  output: outlines
-labels:
-  - source: 1
-  - object
+  output: outlines    # Provide the variable name used for the bounding boxes
+labels:               # If you want to validate labels for bounding boxes, use a list
+  - text: 1
+  - image
