--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "abulafia"
-version = "0.1.9"
+version = "0.1.10"
 description = "A tool for fair and reproducible crowdsourcing using Toloka"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -17,6 +17,7 @@ dependencies = [
     "crowd_kit>=1.0.0",
     "pytest",
     "PyYAML>=6.0",
+    "shapely>=2.0.1",
     "toloka_kit[pandas]>=1.0.0",
     "wasabi>=0.9.0"
 ]
