add configurable components to ImageSegmentation; rename demo image tsv

--- a/examples/config/classify_image.yaml
+++ b/examples/config/classify_image.yaml
@@ -1,6 +1,6 @@
 name: classify_images
 data:
-  file: data/verify_image_data.tsv
+  file: data/image_data.tsv
   input:
     image: url                    
   output:
