--- a/examples/config/forward_verify.yaml
+++ b/examples/config/forward_verify.yaml
@@ -3,10 +3,7 @@ data:
   output: result            # What the action outputs
 source: aggregate_verify    # Pool/action from which tasks are forwarded to this action
 actions:
-  on_result:                # Keys: possible outputs to the task
-                            # Values: pools to which assignments with the output are forwarded
-                            # Special cases: value "accept" automatically accepts task, "reject" automatically rejects task
-                            #                empty value simply submits the task (does not forward, reject or accept)
+  on_result:
     correct: 
       - accept
       - separate_bboxes
