--- a/examples/config/action_demo/aggregate_verify.yaml
+++ b/examples/config/action_demo/aggregate_verify.yaml
@@ -3,4 +3,7 @@ source: verify_outlines   # Pool from which tasks are forwarded to the Aggregate
 actions:                  # What happens to tasks after aggregation
   on_result: forward_verify
 method: dawid_skene       # Aggregation method. For options, see https://toloka.ai/en/docs/crowd-kit/
-                          # For now, methods for categorical responses are supported
+messages:
+  correct: "Your work was verified as correct by other workers."
+  incorrect: "Your work was verified as incorrect by other workers."
+  human_error: "Your work was verified as partially correct by other users. You will be paid for the work."
