--- a/examples/config/action_demo/outline_text.yaml
+++ b/examples/config/action_demo/outline_text.yaml
@@ -5,10 +5,14 @@ data:
   output:
     outlines: json
 actions:
-  on_closed: aggregate_detect
+  on_submitted: verify_outlines
+  on_rejected: outline_text
 interface:
   prompt: Read the instructions first. Then outline all diagram elements that contain
     text, letters or numbers.
+  tools:
+    - rectangle
+    - polygon
 project:
   setup:
     public_name: Outline text, letters or numbers in diagrams
