--- a/examples/config/action_demo/aggregate_verify.yaml
+++ b/examples/config/action_demo/aggregate_verify.yaml
@@ -1,8 +1,5 @@
 name: aggregate_verify
-source: verify_outlines   # Pool from which tasks are forwarded to the Aggregate-action
-actions:                  # What happens to tasks after aggregation
-  on_result: forward_verify
-method: dawid_skene       # Aggregation method. For options, see https://toloka.ai/en/docs/crowd-kit/
+method: dawid_skene
 messages:
   correct: "Your work was verified as correct by other workers."
   incorrect: "Your work was verified as incorrect by other workers."
