--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "abulafia"
-version = "0.2.2.1"
+version = "0.3"
 description = "A tool for fair and reproducible crowdsourcing using Toloka"
 readme = "README.md"
 requires-python = ">=3.8"
@@ -14,10 +14,10 @@ authors = [
     {name = "Rosa Suviranta"}
 ]
 dependencies = [
-    "crowd_kit>=1.2.1",
+    "crowd_kit>=1.3.0",
     "pytest",
     "PyYAML==6.0",
     "shapely==2.0.1",
-    "toloka_kit[pandas]>=1.0.0",
+    "toloka_kit[pandas]=1.2.2",
     "wasabi==1.1.1"
 ]
